<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="bottom">

    <ImageView
        android:id="@+id/shield_club_header"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingTop="8dp"
        app:srcCompat="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/navegation_header"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/shield_club_header"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/title_header_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email_header_index_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_test"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>