<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="#ffffff"
    tools:context=".auth.infrastructure.LoginFragment"
    android:fitsSystemWindows="true"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
    >

    <!-- Vista para LOGIN -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:background="@drawable/logo_pelota"
                android:contentDescription="@string/logo" />



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical"
            >

            <!-- USER NAME-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:nextFocusForward="@id/etPassword"
                    android:imeOptions="actionNext"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:nextFocusForward="@id/etPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar_sesion"
                    android:layout_centerHorizontal="true"
                    />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/btnLogin"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />


            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>